--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -288,7 +288,7 @@
 
 #community_block{
 	margin-top: -20px;
-	position: absolute;
+	position: relative;
 
 	.community-caption{
 	  background-color: rgba(0, 0, 0, 0.1);
@@ -312,6 +312,52 @@
 	}
 
 }
+
+.page-footer {
+	  background-color: rgba(0, 0, 0, 0.9) !important;
+	  color: white;
+	  padding-top: 1%;
+		position: relative;
+	}
+
+	.page-footer li {
+	  list-style: none;
+	  padding: 1%;
+	}
+
+	.page-footer h5 {
+	  line-height: 110%;
+	  margin: 0.82rem 0 0.656rem 0;
+	  display: block;
+	  display: block;
+	  font-weight: bold;
+	  display: flex;
+	  flex-direction: column;
+	  text-align: justify;
+	  text-rendering: optimizeLegibility;
+	  -webkit-font-smoothing: antialiased;
+	  font-size: 2.2rem;
+		font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+	}
+
+	.page-footer li a, .page-footer p{
+	  color: white;
+	  font-size: 1.2em;
+	}
+
+	.page-footer ul {
+	  list-style: none;
+	  padding: 0px;
+	}
+
+	.white-text{
+		color: white;
+	}
+
+	.footer-copyright {
+	  padding: 0.5%;
+	  background-color: rgba(0, 0, 0, 1.5) !important;
+	}
 
 
 
