--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -98,11 +98,58 @@ html
 			block content
 
 
-		//- FOOTER
-		.container: #footer
+		footer.page-footer
+			.container
+				.row
+					.col-lg-4.col-md-12.col-s-12
+						h4.white-text
+							b  STAY CONNECTED 
+						ul
+							li
+								a.grey-text.text-lighten-3
+									i.mdi.mdi-phone.small
+									|  (63)(049)536-0014
+							li
+								a.grey-text.text-lighten-3
+									i.mdi.mdi-email.small
+									|  pcaarrd@pcaarrd.dost.gov.ph
+							li
+								a.grey-text.text-lighten-3
+									i.mdi.mdi-earth.small
+									|  http://www.pcaarrd.dost.gov.ph
+							li
+								a.grey-text.text-lighten-3
+									i.mdi.mdi-map-marker.small
+									|  DOST-PCAARRD, Los Baños, Laguna
+					.col-lg-4.col-md-12.col-s-12
+						h4.white-text
+							b  GET INVOLVED 
+						ul
+							li
+								a.grey-text.text-lighten-3(href='https://www.facebook.com/PCAARRD', target='_blank')
+									i.mdi.mdi-facebook.small
+									|  Like us on Facebook
+							li
+								a.grey-text.text-lighten-3(href='https://twitter.com/dostpcaarrd', target='_blank')
+									i.mdi.mdi-twitter.small
+									|  Follow us on Twitter
+							li
+								a.grey-text.text-lighten-3(href='https://www.youtube.com/channel/UCcrb__kJo7NCYYlbjwAGVwA', target='_blank')
+									i.mdi.mdi-youtube-play.small
+									|  Subscribe on our Channel
+							li
+								a.grey-text.text-lighten-3(href='https://plus.google.com/+DOSTPCAARRD', target='_blank')
+									i.mdi.mdi-google-plus.small
+									|  Add us to your Circle
+					.col-lg-4.col-md-12.col-s-12
+						h4.white-text
+							b  ABOUT DPITC 
+						p.white-text
+						| A One-Stop-Shop 'Convergence Hub' for inventors and technology users in the agriculture, aquatic, and natural resources sectors in the Philippines within every Juan's reach.
+		.footer-copyright
+			.container
+				| © Copyright 2016. DOST-PCAARRD. All rights reserved.
 
-			//- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
-			p All Rights Reserve 2016. DOST-PCAARRD 2016. 
 
 
 		//- JAVASCRIPT
