--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -180,12 +180,12 @@ block content
 		a(href='#')
 			img( src="/images/community.png" title="Community" height="30px")
 
-	div(style='float:right; z-index:100; right:0px; top:150px;  position: fixed; ')
-		form.search-form(action='')
-			.form-group.has-feedback
-				label.sr-only(for='search') Search
-				input#search.form-control(type='text', name='search', placeholder='Search')
-				span.glyphicon.glyphicon-search.form-control-feedback
+	//- div(style='float:right; z-index:100; right:0px; top:150px;  position: fixed; ')
+	//- 	form.search-form(action='')
+	//- 		.form-group.has-feedback
+	//- 			label.sr-only(for='search') Search
+	//- 			input#search.form-control(type='text', name='search', placeholder='Search')
+	//- 			span.glyphicon.glyphicon-search.form-control-feedback
 
 
 	#tech_block.fh5co-project-style-3
@@ -252,7 +252,6 @@ block content
 					.fh5co-text
 						.tech-category NATURAL RESOURCE
 						h4 | Smarter Approaches to Reinvigorate Agriculture as an Industry in the Philippines (SARAI)
-			.clearfix.visible-sm-block
 			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
 				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2676-swine-genomics-to-help-improve-the-industry-s-productivity', style='background-image: url(/images/exhibit/pigs.jpg);', target='_blank')
 					img.img-responsive.sr-only(src='/images/exhibit/pigs.jpg', alt='Image')
@@ -307,6 +306,60 @@ block content
 					.fh5co-text
 						.tech-category AGRICULTURE
 						h3 Enhancing peanut productivity
+			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
+				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/bigeyelet.jpg);', target='_blank')
+					img.img-responsive.sr-only(src='/images/exhibit/bigeyelet.jpg', alt='Image')
+					.tech-icon
+						img(src='/images/exhibit/aqua.png')
+					.fh5co-overlay
+					.fh5co-text
+						.tech-category AQUACULTURE
+						h3 Big Eyelet
+			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
+				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/biofloc.jpg);', target='_blank')
+					img.img-responsive.sr-only(src='/images/exhibit/biofloc.jpg', alt='Image')
+					.tech-icon
+						img(src='/images/exhibit/nr.png')
+					.fh5co-overlay
+					.fh5co-text
+						.tech-category NATURAL RESOURCE
+						h3 Biofloc
+			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
+				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/knifefish.jpg);', target='_blank')
+					img.img-responsive.sr-only(src='/images/exhibit/knifefish.jpg', alt='Image')
+					.tech-icon
+						img(src='/images/exhibit/aqua.png')
+					.fh5co-overlay
+					.fh5co-text
+						.tech-category AQUACULTURE
+						h3 Knifefish
+			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
+				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/mango.jpg);', target='_blank')
+					img.img-responsive.sr-only(src='/images/exhibit/mango.jpg', alt='Image')
+					.tech-icon
+						img(src='/images/exhibit/agri.png')
+					.fh5co-overlay
+					.fh5co-text
+						.tech-category AGRICULTURE
+						h3 Mango
+			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
+				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/mangrove.jpg);', target='_blank')
+					img.img-responsive.sr-only(src='/images/exhibit/mangrove.jpg', alt='Image')
+					.tech-icon
+						img(src='/images/exhibit/nr.png')
+					.fh5co-overlay
+					.fh5co-text
+						.tech-category NATURAL RESOURCE
+						h3 Mangrove
+			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
+				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/aquaculture.jpg);', target='_blank')
+					img.img-responsive.sr-only(src='/images/exhibit/aquaculture.jpg', alt='Image')
+					.tech-icon
+						img(src='/images/exhibit/aqua.png')
+					.fh5co-overlay
+					.fh5co-text
+						.tech-category AQUACULTURE
+						h3 Aquaculture
 		//- .row.p
 		//- 	.col-md-12.text-center
 		//- 		p.button-link
