Added Alpha Version Tag

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -21,7 +21,7 @@
 }
 
 .links{
-  font-size: 16px;
+  font-size: 14px;
   margin-top: 25px;
 }
 
@@ -87,7 +87,7 @@
   left: 30px;
   width: 95%;
   padding: 5px;
-  background-color: rgba(0, 0, 0, 0.1);
+  //background-color: rgba(0, 0, 0, 0.1);
   //text-align: left;
 }
 
@@ -359,5 +359,24 @@
 	  background-color: rgba(0, 0, 0, 1.5) !important;
 	}
 
-
+	#versionbutton {
+	  background-color: #FFC131;
+	  color: #484848;
+	  font-size: 14px;
+	  font-weight: bold;
+	  margin-top: -20px;
+	  height: 40px;
+	  width: 160px;
+	  border-radius: 5px;
+	  font-family: 'Open Sans', sans-serif;
+	}
+	#versionbutton:hover, #versionbutton:active {
+	    background-color: #2A2A2A;
+	    color: white;
+	    cursor: pointer;
+	    -webkit-transition: color 2s ease-out;
+	    -moz-transition: color 2s ease-out;
+	    -o-transition: color 2s ease-out;
+	    transition: color 2s ease-out;
+	}
 
