Added social buttons

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -314,69 +314,144 @@
 }
 
 .page-footer {
-	  background-color: rgba(0, 0, 0, 0.9) !important;
-	  color: white;
-	  padding-top: 1%;
-		position: relative;
-	}
+  background-color: rgba(0, 0, 0, 0.9) !important;
+  color: white;
+  padding-top: 1%;
+	position: relative;
+}
 
-	.page-footer li {
-	  list-style: none;
-	  padding: 1%;
-	}
+.page-footer li {
+  list-style: none;
+  padding: 1%;
+}
 
-	.page-footer h5 {
-	  line-height: 110%;
-	  margin: 0.82rem 0 0.656rem 0;
-	  display: block;
-	  display: block;
-	  font-weight: bold;
-	  display: flex;
-	  flex-direction: column;
-	  text-align: justify;
-	  text-rendering: optimizeLegibility;
-	  -webkit-font-smoothing: antialiased;
-	  font-size: 2.2rem;
-		font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-	}
+.page-footer h5 {
+  line-height: 110%;
+  margin: 0.82rem 0 0.656rem 0;
+  display: block;
+  display: block;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-size: 2.2rem;
+	font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+}
 
-	.page-footer li a, .page-footer p{
-	  color: white;
-	  font-size: 1.2em;
-	}
+.page-footer li a, .page-footer p{
+  color: white;
+  font-size: 1.2em;
+}
 
-	.page-footer ul {
-	  list-style: none;
-	  padding: 0px;
-	}
+.page-footer ul {
+  list-style: none;
+  padding: 0px;
+}
 
-	.white-text{
-		color: white;
-	}
+.white-text{
+	color: white;
+}
 
-	.footer-copyright {
-	  padding: 0.5%;
-	  background-color: rgba(0, 0, 0, 1.5) !important;
-	}
+.footer-copyright {
+  padding: 0.5%;
+  background-color: rgba(0, 0, 0, 1.5) !important;
+}
 
-	#versionbutton {
-	  background-color: #FFC131;
-	  color: #484848;
-	  font-size: 14px;
-	  font-weight: bold;
-	  margin-top: -20px;
-	  height: 40px;
-	  width: 160px;
-	  border-radius: 5px;
-	  font-family: 'Open Sans', sans-serif;
-	}
-	#versionbutton:hover, #versionbutton:active {
-	    background-color: #2A2A2A;
-	    color: white;
-	    cursor: pointer;
-	    -webkit-transition: color 2s ease-out;
-	    -moz-transition: color 2s ease-out;
-	    -o-transition: color 2s ease-out;
-	    transition: color 2s ease-out;
-	}
+#versionbutton {
+  background-color: #FFC131;
+  color: #484848;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: -20px;
+  height: 40px;
+  width: 160px;
+  border-radius: 5px;
+  font-family: 'Open Sans', sans-serif;
+}
+#versionbutton:hover, #versionbutton:active {
+    background-color: #2A2A2A;
+    color: white;
+    cursor: pointer;
+    -webkit-transition: color 2s ease-out;
+    -moz-transition: color 2s ease-out;
+    -o-transition: color 2s ease-out;
+    transition: color 2s ease-out;
+}
 
+.social-sharing.fixed {
+  position: fixed;
+  float: left;
+  z-index: 100;
+  left: 0px;
+  top: 100px;
+  width: auto;
+  list-style-type: none;
+  padding-left: 0px;
+
+}
+
+.social-sharing.fixed li a {
+    color: #ffe6c5;
+    background: #ff9302;
+    width: 52px;
+    height: 52px;
+    display: block;
+    text-align: center;
+    padding-top: 7px;
+    margin-bottom: 1px;
+    font-size: 25px;
+}
+
+.social-sharing.fixed li.title {
+    color: #ffe6c5;
+    background: #ff9302;
+    width: 52px;
+    height: 52px;
+    display: block;
+    text-align: center;
+    padding-top: 6px;
+    line-height: 20px;
+    margin-bottom: 1px;
+    font-size: 13px;
+    margin-bottom: 14px;
+    position: relative;
+}
+
+.social-sharing.fixed li.title .arrow {
+    position: absolute;
+    bottom: -5px;
+    margin-left: -5px;
+    left: 50%;
+}
+
+
+.social-sharing.fixed li.community a {
+    background: #eee;
+}
+
+.social-sharing.fixed li.facebook a {
+    background: #3a55a0;
+}
+
+.social-sharing.fixed li.twitter a {
+    background: #51abf1;
+}
+.social-sharing.fixed li.youtube a {
+    background: #e52d27;
+}
+
+.social-sharing.fixed li i {
+    color: #fff;
+    padding-top: 5px;
+}
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    transform: translate(0,0);
+}
