--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -22,6 +22,7 @@ html
 		link(rel="stylesheet" type="text/css" href="/styles/technology.css")
 		link(rel="stylesheet" type="text/css" href="/styles/slick/slick.css")
 		link(rel="stylesheet" type="text/css" href="/styles/slick/slick-theme.css")
+		script(src='https://use.fontawesome.com/b2a273c68b.js')
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
@@ -50,7 +51,7 @@ html
 			//- ... or completely change this header to suit your design.
 
 			div(role="navigation").navbar.navbar-style1
-				.container(style="height:85px")
+				div(style="height:85px")
 					.navbar-header
 						button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
 							span.sr-only Toggle navigation
