Added a container for the whole page.

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -3,7 +3,10 @@
   margin-top: 30px;
 }
 */
-
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
 .navbar-style1{
   /*position: absolute;*/
   z-index: 8;
@@ -74,6 +77,10 @@
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
+
+.no-padding{
+	padding: 0px;
+}
 
 /* Carousel base class */
 .carousel {
@@ -402,7 +409,7 @@
     padding-top: 7px;
     margin-bottom: 1px;
     font-size: 25px;
-}
+}   
 
 .social-sharing.fixed li.title {
     color: #ffe6c5;
@@ -428,19 +435,73 @@
 
 
 .social-sharing.fixed li.community a {
+    width: 52px;
     background: #eee;
 }
 
+.social-sharing.fixed li.community a:hover {
+    width: 70px;
+    cursor: pointer;
+    -webkit-transition: width 0.5s ease-out;
+    -moz-transition: width 0.5s ease-out;
+    -o-transition: width 0.5s ease-out;
+    transition: width 0.5s ease-out;
+} 
+
 .social-sharing.fixed li.facebook a {
+		width: 52px;
     background: #3a55a0;
 }
 
+.social-sharing.fixed li.facebook a:hover {
+    width: 70px;
+    cursor: pointer;
+    -webkit-transition: width 0.5s ease-out;
+    -moz-transition: width 0.5s ease-out;
+    -o-transition: width 0.5s ease-out;
+    transition: width 0.5s ease-out;
+} 
+
 .social-sharing.fixed li.twitter a {
+    width: 52px;
     background: #51abf1;
 }
+
+.social-sharing.fixed li.twitter a:hover {
+    width: 70px;
+    cursor: pointer;
+    -webkit-transition: width 0.5s ease-out;
+    -moz-transition: width 0.5s ease-out;
+    -o-transition: width 0.5s ease-out;
+    transition: width 0.5s ease-out;
+} 
+
 .social-sharing.fixed li.youtube a {
+    width: 52px;
     background: #e52d27;
 }
+
+.social-sharing.fixed li.youtube a:hover {
+    width: 70px;
+    cursor: pointer;
+    -webkit-transition: width 0.5s ease-out;
+    -moz-transition: width 0.5s ease-out;
+    -o-transition: width 0.5s ease-out;
+    transition: width 0.5s ease-out;
+} 
+
+.social-sharing.fixed li.newsletter a {
+    width: 52px;
+}
+
+.social-sharing.fixed li.newsletter a:hover {
+    width: 70px;
+    cursor: pointer;
+    -webkit-transition: width 0.5s ease-out;
+    -moz-transition: width 0.5s ease-out;
+    -o-transition: width 0.5s ease-out;
+    transition: width 0.5s ease-out;
+} 
 
 .social-sharing.fixed li i {
     color: #fff;
@@ -454,4 +515,162 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     transform: translate(0,0);
+}
+
+
+#community_block {
+    min-height: 137px;
+    background-color: #252525;
+    width: 100%;
+    overflow: hidden;
+    padding: 0 20px 65px;
+}
+#community_block > .container {
+    padding: 0 15px;
+}
+
+#community_block .more-information {
+    padding: 60px 140px 40px;
+}
+#community_block .more-information {
+    border-bottom: 1px solid #646464;
+    margin: 5px 0;
+    padding: 60px 40px 40px;
+    text-align: center;
+}
+
+#community_block .more-information > div >div > em {
+    font-family: "Volkhov";
+    color: #fff;
+    font-size: 34px;
+    font-style: normal;
+    line-height: 40px;
+}
+
+#community_block .more-information span {
+    display: block;
+    color: #ff9300;
+    font-size: 17px;
+    margin-top: 3px;
+}
+
+#community_block .more-information .details-box {
+    background-color: #454545;
+    margin: 40px 0;
+    padding: 0;
+    position: relative;
+}
+
+#community_block .more-information .details-box > div {
+    padding: 0;
+}
+
+#community_block p {
+    margin-top: 26px;
+    color: #fff;
+    font-size: 16px;
+    line-height: 23px;
+    text-align: left;
+}
+
+#community_block .more-information .image, #community-block .more-information .description {
+    max-width: 402px;
+}
+
+#community_block .more-information .details-box .description {
+    padding: 12px 23px;
+}
+
+#community_block .more-information .details-box > div {
+    padding: 0;
+}
+#community_block .more-information .image, #community_block.more-information .description {
+    max-width: 402px;
+}
+
+#community_block .more-information .image, #community_block.more-information .description p {
+    color: #fff;
+    font-size: 16px;
+    line-height: 23px;
+    text-align: left;
+}
+
+#community_block .more-information .details-box .button {
+    color: #fff;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    padding: 8px 14px;
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: #ff9300;
+}
+
+#community_block .subscribe {
+    max-width: 402px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.subscribe {
+    margin-bottom: 32px;
+}
+
+#community_block h2, #community_block h2 em {
+    color: #fff;
+}
+
+.subscribe h2, .translations h2, .share-block h2 {
+    font-size: 18px;
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-weight: 100;
+    line-height: 23px;
+}
+
+#community_block .subscribe form {
+    width: 400px;
+    margin: auto;
+}
+.subscribe form {
+    position: relative;
+}
+
+#community_block .subscribe form input {
+    background-color: #252525;
+    padding: 8px 10px 7px;
+}
+.subscribe form input {
+    width: 100%;
+    border: 1px solid #999;
+    font-size: 16px;
+    color: #999;
+    font-weight: 100;
+    padding: 7px 10px;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+}
+
+.subscribe form .button {
+    background: #fd9400;
+    bottom: 0px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: 42px;
+    height: 42px;
+    color: #fff;
+    border: none;
+    padding: 0;
+}
+
+.subscribe form .button i {
+    color: #fff;
+    position: relative;
+    top: 5px;
+    font-size: 12px;
+    left: 1px;
 }
