--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -48,23 +48,23 @@ block content
 			| Join
 			br 
 			| Us
-			img.arrow(src='http://d2sh4fq2xsdeg9.cloudfront.net/application/assets/genx/images/share-arrow.png', alt='')
+			img.arrow(src='https://d2sh4fq2xsdeg9.cloudfront.net/application/assets/genx/images/share-arrow.png', alt='')
 		
 		li.community
-			a(target='_blank', href='https://www.facebook.com/Thomson.Reuters.Foundation.News')
+			a(target='_blank', href='#')
 				img( src="/images/community.png" title="Community" height="40px")
 
 		li.facebook
-			a(target='_blank', href='https://www.facebook.com/Thomson.Reuters.Foundation.News')
+			a(target='_blank', href='#')
 				i.fa.fa-facebook
 		li.twitter
-			a(target='_blank', href='https://twitter.com/alertnet')
+			a(target='_blank', href='#')
 				i.fa.fa-twitter
 		li.youtube
-			a(target='_blank', href='https://www.youtube.com/user/thomsonreutersfdn')
+			a(target='_blank', href='#')
 				i.fa.fa-youtube
 		li.newsletter
-			a(target='_blank', href='http://surveys.trust.org/s3/Newsletter-Subscription')
+			a(target='_blank', href='#')
 				i.fa.fa-envelope
 	
 	//- div(style='float:right; z-index:100; right:0px; top:100px; background-color:#EEE; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
@@ -420,14 +420,14 @@ block content
 									p
 										| DPITC is where DOST-PCAARRD presents, promotes and, commercializes its Science and Technology products to the public. DPITC embodies DOST-PCAARRD’s vision for a world-class ‘one-stop service facility’ where the department and council’s network of allied agencies converge and offers major information-communication services, technology transfer, commercialization services and training-capacity building.
 									
-								a(target='_blank', href='http://www.trust.org/under-reported-stories/')
+								a(target='_blank', href='#')
 									span.button Find out more
 							.col-xs-12.subscribe-container
 								.subscribe
 									h2
 										em Newsletter
 										|  sign up:
-									form#newsletter(target='_blank', method='get', action='http://surveys.trust.org/s3/Newsletter-Subscription?email=')
+									form#newsletter(target='_blank', method='get', action='#')
 										input#email(name='email', type='text', placeholder="What's your email?")
 										.button(onclick="document.forms['newsletter'].submit();")
 											i.fa.fa-chevron-right
