Fixed social buttons and navbar

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -392,7 +392,7 @@
   float: left;
   z-index: 100;
   left: 0px;
-  top: 100px;
+  top: 200px;
   width: auto;
   list-style-type: none;
   padding-left: 0px;
@@ -489,6 +489,22 @@
     -o-transition: width 0.5s ease-out;
     transition: width 0.5s ease-out;
 } 
+
+.social-sharing.fixed li.google a {
+    width: 52px;
+    background: #d34836;
+}
+
+.social-sharing.fixed li.google a:hover {
+    width: 70px;
+    cursor: pointer;
+    -webkit-transition: width 0.5s ease-out;
+    -moz-transition: width 0.5s ease-out;
+    -o-transition: width 0.5s ease-out;
+    transition: width 0.5s ease-out;
+} 
+
+
 
 .social-sharing.fixed li.newsletter a {
     width: 52px;
