--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -50,8 +50,8 @@ html
 			//- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
 			//- ... or completely change this header to suit your design.
 
-			div(role="navigation").navbar.navbar-style1
-				div(style="height:85px")
+			div(role="navigation").navbar.navbar-style1.navbar-fixed-top
+				div(style="height:85px; background-color:white;")
 					.navbar-header
 						button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
 							span.sr-only Toggle navigation
